# mcp-verified

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  TASKS.md  pyproject.toml  spec.md
.github/workflows/: ci.yml  gitleaks.yml  secrets-scan.yml
checks/: ATTRIBUTION.md  advanced-obfuscation-evasion-security-check.md  ci-secrets.md  command-injection-flag-bypass-check.md  credential-management-security.md  dynamic-content-execution-security-check.md  http-client-resilience.md  mcp-debug-log-redaction-check.md  mcp-transport-security.md  python-authentication-semgrep-security-check.md  redirect-hijacking.md  supply-chain-maintainer-blast-radius-check.md  supply-chain-preinstall-hook-check.md  token-lifecycle-policy-check.md  tool-poisoning-detection.md  tool-schema-mutation-rug-pull-check.md
docs/: ARCHITECTURE.md
docs/adr/: ADR-001-stack-python-311.md  ADR-002-registry-data-source.md  ADR-003-read-only-static-analysis.md  ADR-004-ollama-default-provider.md  ADR-005-audit-db-schema-compat.md  ADR-006-tier-verdict-naming.md  ADR-007-mcpserver-audit-checks-fork.md  ADR-008-phase1-popularity-signal.md  ADR-009-pyyaml-runtime-dependency.md  ADR-010-sandbox-doctrine-for-future-stdio-probes.md  ADR-011-mcp-protocol-threat-taxonomy-adoption.md  ADR-012-schema-hash-diff-for-rug-pull-detection.md  INDEX.md
docs/evidence/: 2026-05-28-registry-api-discovery.md  2026-05-29-dogfood-probes.md  (+5 more)
examples/: quickstart.md
mcp_verified/: __init__.py  _pipeline.py  cli.py
scripts/: audit_deps.py  coverage_stdlib.py  private_path_check.sh  release_gate.sh  render_demo.py
tests/: test_budget.py  test_checks_directory.py  test_checks_loader.py  test_cli.py  test_deterministic_executor.py  test_discovery.py  test_divergence.py  test_exporter.py  test_frontmatter.py  test_integrity.py  test_llm_assisted_executor.py  test_output_writer.py  test_paid_providers.py  test_providers.py  test_registry_client.py  test_release_gate.py  test_safe_clone.py  test_verdict_aggregator.py
(+56 files in other folders)
