[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-verified"
version = "0.0.1"
description = "Reproducible, batched audit of every server in the official MCP registry under four constraints (free, no credit card, local-first, security-first)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "leagames0221-sys" },
]
keywords = ["mcp", "model-context-protocol", "audit", "registry", "security", "ollama", "local-llm"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  # Core dependencies will be added per task. Start with zero deps for minimum
  # supply chain exposure. Each addition requires an ADR per the security baseline.
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "pre-commit>=4.0.0",
]

[project.scripts]
mcp-verified = "mcp_verified.cli:main"

[project.urls]
Homepage = "https://github.com/leagames0221-sys/mcp-verified"
Repository = "https://github.com/leagames0221-sys/mcp-verified"
Issues = "https://github.com/leagames0221-sys/mcp-verified/issues"
Changelog = "https://github.com/leagames0221-sys/mcp-verified/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["mcp_verified"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
